fixed text overflow issue as well as large image constraints.

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -2,14 +2,20 @@
 
 * {
     box-sizing: border-box;
-    /* border: 1px solid red;
-    outline: 1px solid green; */
+ margin: 0;
+ padding: 0;
 }
-
 
 
 ul {
     list-style: none;
+}
+
+.rj-nav-svg {
+    width: 122px;
+    height: auto;
+    
+
 }
 
 
@@ -18,8 +24,7 @@ ul {
     /* margin-top: -2rem; */
     padding: 1.3em;
     width: minmax(85vw, 95vw);
-    display: grid;
-    place-items: center;
+   
     
 }
 
@@ -43,7 +48,7 @@ ul {
     flex-wrap: nowrap;
     background-color: rgba(99 99 99 / 0.65);
     margin-bottom: 2rem;
-    width: 66%;
+    width: 100%;
     height: auto;
 }
 
@@ -129,6 +134,13 @@ filter: drop-shadow(9px 11px 7px rgba(12 12 12 / 0.6) );
     color: #ff0000;
 }
 
+.rj-news-section {
+    width: 90%;
+    max-width: 1240px;
+    display: flex;
+    justify-content: center;
+}
+
 .rj-home-news {
     position: relative;
     top: -2rem;
@@ -137,33 +149,31 @@ filter: drop-shadow(9px 11px 7px rgba(12 12 12 / 0.6) );
     margin: 0.75em 0 1.5em 0;
     padding: 1em;
     display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 70ch;
   grid-template-rows: auto;
   grid-gap: 20px;
+
+  /* place-content: center; */
 }
 @media (min-width: 30em) {
 .rj-home-news {
-    grid-template-columns: 1fr;
+    grid-template-columns: min(70ch , 90%) ;
         }
 
 }
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     .rj-about-hero {
         height: 400px;
         padding-bottom: 60%;
     }
-}
+} */
 
 @media (min-width: 60em) {
 .rj-home-news {
-    grid-template-columns: repeat(2, 1fr);
-    /* grid-column: 1 / span 2; */
+    grid-template-columns: repeat(2, min(70ch , 90%));
+        
+}
 
-    
-}
-.rj-about-hero {
-    grid-column: 2/span 3;
-}
 }
 
 
@@ -186,10 +196,11 @@ filter: drop-shadow(9px 11px 7px rgba(12 12 12 / 0.6) );
     top: 0;
     transition: all 0.1s ease-in;
 
+
 }
 
 .rj-news-card article {
-    padding: 20px;
+    padding: 0.15em;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -206,8 +217,19 @@ filter: drop-shadow(9px 11px 7px rgba(12 12 12 / 0.6) );
 .rj-news-card pre {
     flex: 1;
     line-height: 1.4;
-    border-bottom: 1px solid #3333;
-    padding-bottom: 0.25em;
+    border-bottom: 1px solid #33333333;
+    font-size: 1.15rem;
+    white-space: pre-wrap;
+    text-align: justify;
+    /* Smol Responsive Padding FTW! */
+    padding: clamp(.55rem, 3%, 2rem);
+    /* Provide a max-width and prevent overflow */
+    width: min(50ch, 90%);
+    /* Help prevent overflow of long words/names/URLs */
+    word-break: break-word;
+    /* Optional, not supported for all languages */
+    hyphens: auto;
+  
 }
 
 .rj-news-card span:first-of-type {
@@ -221,10 +243,12 @@ filter: drop-shadow(9px 11px 7px rgba(12 12 12 / 0.6) );
 }
 
 
-.rj-news-card .rj-card-bgimg {
-    padding-bottom: 60%;
+.rj-news-card .rj-card-img {
+    /* padding-bottom: 60%;
     background-size: cover;
-    background-position: center center;
+    background-position: center center; */
+    object-fit: contain;
+    width: 100%;
     box-shadow: 0px 2px 5px 1px #3338;
     border: 1px solid rgb(22 44 66 / 66%);
 
